Disable a few g2o things by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,7 @@ ENDIF(OPENMP_FOUND AND G2O_USE_OPENMP)
 # OpenGL is used in the draw actions for the different types, as well
 # as for creating the GUI itself
 FIND_PACKAGE(OpenGL)
-SET(G2O_USE_OPENGL ON CACHE BOOL "Build g2o with OpenGL support for visualization")
+SET(G2O_USE_OPENGL OFF CACHE BOOL "Build g2o with OpenGL support for visualization")
 IF (OPENGL_FOUND AND G2O_USE_OPENGL)
   SET (G2O_HAVE_OPENGL 1)
   INCLUDE_DIRECTORIES(${OPENGL_INCLUDE})
@@ -85,13 +85,13 @@ ENDIF(OPENGL_FOUND AND G2O_USE_OPENGL)
 FIND_PACKAGE(QGLViewer)
 
 # shall we build the core apps using the library
-SET(G2O_BUILD_APPS ON CACHE BOOL "Build g2o apps")
+SET(G2O_BUILD_APPS OFF CACHE BOOL "Build g2o apps")
 IF(G2O_BUILD_APPS)
   MESSAGE(STATUS "Compiling g2o apps")
 ENDIF(G2O_BUILD_APPS)
 
 # shall we build the examples
-SET(G2O_BUILD_EXAMPLES ON CACHE BOOL "Build g2o examples")
+SET(G2O_BUILD_EXAMPLES OFF CACHE BOOL "Build g2o examples")
 IF(G2O_BUILD_EXAMPLES)
   MESSAGE(STATUS "Compiling g2o examples")
 ENDIF(G2O_BUILD_EXAMPLES)
