- start of a unit test for g2o

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,7 +136,8 @@ INSTALL(FILES ${PROJECT_BINARY_DIR}/g2o/config.h DESTINATION ${CMAKE_INSTALL_PRE
 #ADD_SUBDIRECTORY(EXTERNAL)
 ADD_SUBDIRECTORY(slam_parser)
 ADD_SUBDIRECTORY(g2o)
-
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+ADD_SUBDIRECTORY(test)
 
 option(BUILD_ECTO_CELLS "Build ecto cells" ON)
 if(BUILD_ECTO_CELLS)
