--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories(${GTEST_INCLUDE_DIRS})
 
 add_executable(g2o_test
   main.cpp
-  sba_test.cpp
+  sba_disparity_test.cpp
   )
 
 target_link_libraries(g2o_test
@@ -19,4 +19,4 @@ target_link_libraries(g2o_test
   g2o_ectomodule
   )
 
-#add_test(g2o_tests ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/g2o_test)
+add_test(g2o_tests ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/g2o_test)
