--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,4 +19,4 @@ target_link_libraries(g2o_test
   g2o_ectomodule
   )
 
-add_test(g2o_tests ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/g2o_test)
+#add_test(g2o_tests ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/g2o_test)
