--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,13 +25,8 @@ IF(APPLE)
 ENDIF(APPLE)
 
 # Set the output directory for the build executables and libraries
-SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${g2o_SOURCE_DIR}/lib)
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${g2o_SOURCE_DIR}/bin)
-IF(WIN32)
-  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${g2o_SOURCE_DIR}/bin)
-ELSE(WIN32)
-  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${g2o_SOURCE_DIR}/lib)
-ENDIF(WIN32)
+SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 
 # Set search directory for looking for our custom CMake scripts to
 # look for SuiteSparse and QGLViewer
@@ -134,10 +129,10 @@ INSTALL(FILES ${PROJECT_BINARY_DIR}/g2o/config.h DESTINATION ${CMAKE_INSTALL_PRE
 
 # Include the subdirectories
 #ADD_SUBDIRECTORY(EXTERNAL)
-ADD_SUBDIRECTORY(slam_parser)
+#ADD_SUBDIRECTORY(slam_parser)
 ADD_SUBDIRECTORY(g2o)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-ADD_SUBDIRECTORY(test)
+#ADD_SUBDIRECTORY(test)
 
 option(BUILD_ECTO_CELLS "Build ecto cells" ON)
 if(BUILD_ECTO_CELLS)
