--- a/g2o/CMakeLists.txt
+++ b/g2o/CMakeLists.txt
@@ -3,9 +3,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 ADD_SUBDIRECTORY(stuff)
 ADD_SUBDIRECTORY(core)
 
-IF(G2O_BUILD_APPS)
-  ADD_SUBDIRECTORY(apps)
-ENDIF(G2O_BUILD_APPS)
+#IF(G2O_BUILD_APPS)
+#  ADD_SUBDIRECTORY(apps)
+#ENDIF(G2O_BUILD_APPS)
 
 ADD_SUBDIRECTORY(math_groups)
 
@@ -16,6 +16,6 @@ ADD_SUBDIRECTORY(types)
 ADD_SUBDIRECTORY(solvers)
 
 # Examples
-IF(G2O_BUILD_EXAMPLES)
-  ADD_SUBDIRECTORY(examples)
-ENDIF(G2O_BUILD_EXAMPLES)
+#IF(G2O_BUILD_EXAMPLES)
+#  ADD_SUBDIRECTORY(examples)
+#ENDIF(G2O_BUILD_EXAMPLES)
