use FindeEigen.cmake in catkin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,7 +133,7 @@ SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${g2o_C_FLAGS}")
 #SET( G2O_EIGEN3_INCLUDE ${g2o_SOURCE_DIR}/EXTERNAL/eigen3 CACHE PATH "Directory of Eigen3")
 #INCLUDE_DIRECTORIES(${g2o_SOURCE_DIR} ${G2O_EIGEN3_INCLUDE})
 find_package(Eigen REQUIRED)
-INCLUDE_DIRECTORIES(${g2o_SOURCE_DIR} ${EIGEN_INCLUDE_DIRS} ${CHOLMOD_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${g2o_SOURCE_DIR} ${Eigen_INCLUDE_DIRS} ${CHOLMOD_INCLUDE_DIR})
 
 # Generate config.h 
 configure_file(config.h.in ${PROJECT_BINARY_DIR}/g2o/config.h)
