--- a/cells/CMakeLists.txt
+++ b/cells/CMakeLists.txt
@@ -5,22 +5,20 @@ endif()
 
 find_package(OpenCV REQUIRED)
 find_package(Eigen REQUIRED)
-find_package(image_pipeline 0.1.0 REQUIRED)
-include_directories(${image_pipeline_INCLUDE_DIRS})
-
-# target_link_libraries(my_thing ${image_pipeline_LIBRARIES})
+find_package(ecto_image_pipeline REQUIRED)
+include_directories(${ecto_image_pipeline_INCLUDE_DIRS})
 
 ectomodule(g2o
-   module.cpp
-   Sba.cpp
-   SbaDisparity.cpp
+           module.cpp
+           Sba.cpp
+           SbaDisparity.cpp
 )
 
 link_ecto(g2o
-  core
-  solver_cholmod
-  types_icp
-  image_pipeline
+          core
+          solver_cholmod
+          ${ecto_image_pipeline_LIBRARIES}
+          types_icp
 )
 
 install_ecto_module(g2o)
